modified:   React_FrontendV2/src/App.css 	modified:   React_FrontendV2/src/pages/HomePage.jsx 	modified:   React_FrontendV2/src/pages/Login.jsx

--- a/React_FrontendV2/src/App.css
+++ b/React_FrontendV2/src/App.css
@@ -109,7 +109,12 @@ footer {
 .flex-equal > * {
 	flex: 1;
 }
-
+.signin input, .signup input{
+	height:2em;
+	font-size:2em;
+	border-radius:0.6em;
+	text-align:center;
+  }
 @media (min-width: 768px) {
 	.flex-md-equal > * {
 		flex: 1;
@@ -120,218 +125,6 @@ footer {
 	}
 }
 
-/*FIN HOME*/
-a {
-	font-weight: 500;
-	text-decoration: inherit;
-}
-
-h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
-}
-
-.SignIn,
-.SignUp,
-.Forget {
-	text-decoration: none;
-	text-align: center;
-	background: none;
-	color: #fff;
-	padding-top: 1em;
-	border: none;
-}
-.SignIn:hover,
-.SignUp:hover,
-.Forget:hover {
-	color: rgba(111, 26, 114, 0.2);
-}
-.signin input,
-.signup input,
-.signup select,
-.forgot input {
-	height: 2em;
-	font-size: 2em;
-	border-radius: 0.6em;
-	text-align: center;
-}
-.signin .send,
-.signup .send,
-.forgot .send {
-	height: 2em;
-	margin-top: 0.5em;
-	border-radius: 0.8em;
-	background-color: rgba(214, 134, 252, 0.4);
-	border: none;
-	font-size: 2em;
-}
-.signin .send:hover,
-.signup .send:hover,
-.forgot .send:hover {
-	background-color: rgba(111, 26, 114, 0.2);
-}
-button {
-	background-color: rgba(111, 26, 114, 0.2);
-}
-.sidebar li {
-	font-size: 1.5em;
-}
-.shine-gradient {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(45deg, rgba(255, 255, 255, 0.5), transparent 80%);
-	pointer-events: none; /* Evita que el gradiente interfiera con los eventos del contenido de la tarjeta */
-}
-
-.additional-info {
-	transform: rotate(-90deg);
-	transform-origin: left bottom;
-	position: absolute;
-	left: 0;
-	bottom: 35%;
-	left: 10%;
-	color: #fff;
-	font-size: 18px;
-	white-space: nowrap;
-	pointer-events: none; /* Evita que interfiera con los eventos del contenido de la tarjeta */
-}
-/* Media query para ajustes específicos en pantallas más claras */
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
-}
-.bi {
-	display: inline-block;
-	width: 1rem;
-	height: 1rem;
-}
-
-/*
- * Sidebar
- */
-
-@media (min-width: 768px) {
-	.sidebar .offcanvas-lg {
-		position: -webkit-sticky;
-		position: sticky;
-		top: 48px;
-	}
-	.navbar-search {
-		display: block;
-	}
-}
-
-.center {
-	width: 75%;
-	margin: 0px auto;
-}
-
-#logo {
-	width: 30%;
-	font-size: 30px;
-	float: left;
-	margin-top: 35px;
-}
-
-#logo img {
-	height: 3em;
-}
-
-#menu a {
-	text-decoration: none;
-	color: #444;
-	transition: 300ms all;
-}
-
-#menu a:hover {
-	color: #24aed8;
-}
-
-.active {
-	border-bottom: 2px solid #24aed8;
-}
-
-#content {
-	width: 70%;
-	float: left;
-	min-height: 650px;
-	margin-right: 20px;
-}
-
-.mid-form {
-	width: 50%;
-	margin: 0px auto;
-}
-
-.mid-form label {
-	display: block;
-	float: left;
-	text-align: left;
-	margin-top: 10px;
-	margin-bottom: 5px;
-	font-size: 17px;
-}
-
-input[type="text"],
-textarea {
-	width: 100%;
-	min-height: 30px;
-	border: 1px solid #ccc;
-	padding: 3px;
-	margin-bottom: 5px;
-	transition: 300ms all;
-}
-input[type="text"]:focus,
-textarea {
-	box-shadow: 0px 0px 2px #ccc inset;
-	outline: none;
-}
-
-textarea {
-	width: 100%;
-	height: 150px;
-	min-width: 100%;
-	max-width: 100%;
-	min-height: 150px;
-	max-height: 300px;
-	outline: none;
-}
-
-.radiobuttons {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	float: left;
-}
-
-.article-item .image-wrap {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	float: left;
-	/*border:1px solid #ccc;*/
-}
-
-.article-item .image-wrap img {
-	height: 100%;
-	text-align: center;
-}
-
-.subheader {
-	font-size: 38px;
-	border-bottom: 1px solid #eee;
-	padding-bottom: 10px;
-}
 
 /* RESPONSIVE */
 
